2008-12-26  Mirco Bauer <meebey@meebey.net> 

	* Chats/ChatView.cs: Disabled Console.WriteLine call.
	* gtk-gui/Smuxi.Frontend.Gnome.SteticPreferencesDialog.cs: funny stetic
	  insisting doing useless changes
	* Frontend.cs: Code clean-up.

2008-12-22  Mirco Bauer <meebey@meebey.net> 

	* Chats/GroupChatView.cs: Some cleanup.
	* EngineManagerDialog.cs: Take care of failed Disconnect() attempts.

2008-12-22  Mirco Bauer <meebey@meebey.net> 

	* Frontend.cs: Made notification area icon configurable, supporting: never,
	  always, minimize to tray, close to tray. (closes trac ticket #137)
	
	  When a RemotingException happens allow the user to reconnect to the
	  server instead of killing the frontend.
	
	  Added preferences to notification area icon context menu as per GNOME
	  HIG.
	* MainWindow.cs, Preferences/PreferencesDialog.cs: Made notification area
	  icon configurable, supporting: never, always, minimize to tray, close to
	  tray. (closes trac ticket #137)

2008-12-19  Mirco Bauer <meebey@meebey.net> 

	* Preferences/PreferencesDialog.cs, Chats/ChatView.cs: Implemented support
	  for changing the text wrap mode from character to word. (closes trac
	  ticket #5)

2008-12-19  Mirco Bauer <meebey@meebey.net> 

	* FindGroupChatDialog.cs: Only change cursor back if the GdkWindow is still
	  available.

2008-12-19  Mirco Bauer <meebey@meebey.net> 

	* MainWindow.cs: Changed the event that quits the application from Destroyed
	  to DeleteEvent, else we can't get the last window size when the window
	  is already gone. (closes trac bug #121)

2008-12-17  Mirco Bauer <meebey@meebey.net> 

	* Chats/ChatView.cs: Only check if text was selected, instead of checking if
	  the chat has a selection, as the property is overridden in
	  GroupChatView. (part of fixing trac bug #112)
	* Chats/GroupChatView.cs: Destroy the selection when the treeview looses the
	  focus and don't let the context menu grab the focus. (part of fixing
	  trac bug #112)
